--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Lexus Design Collection
+title: Lexus Designsamling
 client:
   name: Lexus
-  link: https://www.lexus.co.uk/
+  link: https://www.lexus.se/
 core-se-link: https://www.secretescapes.com/current-sales
 description: >
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 # file paths
 url:     "http://mp.secretescapes.com" # the base hostname & protocol for your site
-baseurl: "/lexus-design-collection" # the subpath of your site, e.g. /blog/
-img:     "/lexus-design-collection/_assets/img"
-css:     "/lexus-design-collection/_assets/css"
-js:      "/lexus-design-collection/_assets/js"
+baseurl: "/lexus-design-collection/se" # the subpath of your site, e.g. /blog/
+img:     "/lexus-design-collection/se/_assets/img"
+css:     "/lexus-design-collection/se/_assets/css"
+js:      "/lexus-design-collection/se/_assets/js"
 
 #global content
 test-drive:
