--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -6,6 +6,7 @@
   price-description: per person for 4 nights
   saved: 37
   expires: 2020/04/14
+  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
 
 - title: Farris Bad
@@ -16,6 +17,7 @@
   price-description: per room per night
   saved: 33
   expires: 2020/04/20
+  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
 
 - title: First Hotel Marin
@@ -26,6 +28,7 @@
   price-description: per room per night
   saved: 43
   expires: 2020/04/20
+  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
 
 - title: Magic Hotel
@@ -36,6 +39,7 @@
   price-description: per room per night
   saved: 55
   expires: 2020/04/20
+  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
 
 - title: Sola Strand Hotel
@@ -46,4 +50,5 @@
   price-description: per room per night
   saved: 47
   expires: 2020/04/20
+  image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
