bug: duplicate site.video reference
There is already a site.video reference for the asset file path. Site would show, but then error on build

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,6 @@ offer-page:
   country: UK
   world: Rest of the world
 
-video:
+feature-video:
   cta: Watch Video
   url: https://www.youtube.com/watch?v=JRg0BYcitU0
