--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
     "start": "gulp"
   },
   "dependencies": {
-    "browser-sync": "^2.2.0",
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-htmlmin": "^4.0.0",
-    "gulp-image": "^4.3.0",
+    "gulp-image": "^4.4.1",
     "gulp-sass": "^4.0.1",
     "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
@@ -18,6 +18,7 @@
     "gulp-watch": "^5.0.1",
     "jquery": "^3.2.1",
     "jquery-countdown": "^2.2.0",
+    "natives": "^1.1.6",
     "reset-css": "^4.0.1",
     "waypoints": "^4.0.1"
   }
