--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ sass:
 #   LOCALE
 ################################################################################
 
-title: Collezione Lexus Design
+title: Lexus Design Collection
 description: >
-  Discover a world of design with Lexus and Secret Escapes. Embark on your own urban adventure in the Lexus UX and let the city inspire you. From the world’s finest design hotels to the trendiest, urban design hangouts in London and Edinburgh, discover the Design Collection.
+  Parti per un viaggio nel design con Lexus e Secret Escapes. Mettiti alla guida del nuovo Lexus UX e preparati a vivere un'avventura urbana senza paragoni. Tra hotel di design griffati e location all'ultima moda, Roma e Milano non hanno più segreti per te. Scopri con noi l'esclusiva Design Collection.
 copyright: '© Copyright <span class="js-year">2019</span> Secret Escapes'
 
 # client
@@ -34,38 +34,38 @@ client:
 secret-escapes:
   current-sales: https://it.secretescapes.com/offerte-in-corso
   nav:
-    - title: Current Sales
+    - title: Offerte In Corso
       link: "{{site.secret-escapes.current-sales}}"
-    - title: Spa
-      link: https://www.secretescapes.com/spa
-    - title: Smart Stays
-      link: https://www.secretescapes.com/smartstays/filter
+    - title: Come Funziona
+      link: https://it.secretescapes.com/come-funziona
+    - title: Buoni Regalo
+      link: https://it.secretescapes.com/offerta-voucher
     - title: "{{site.title}}"
       link: "{{site.baseurl}}"
 
 # offer card
 offer-card:
-  view-offer: View Offer
-  saved: Save up to&nbsp;
-  from: From
-  price: "£{{offer.price}}"
+  view-offer: Scopri L'offerta
+  saved: Risparmia fino al&nbsp;
+  from: A partire da
+  price: "{{offer.price}}€"
   expires:
     # need to manually update the js, just here for reference. Project path: _assets/js/_components/offer-countdown.js
-    today: Ending Today
-    number-of-days: Ending in 99 days
-    one-day: Ending in 1 day
+    today: Scade oggi
+    number-of-days: Scade tra 99 giorni
+    one-day: Scade tra 1 giorno
 
 # test drive promo
 test-drive:
-  title: Test drive the new Lexus UX Self-Charging Hybrid
-  description: Head for your own urban adventure with 24hr test-drives in the new Lexus UX.
-  cta: Book a Test Drive
+  title: Prova il nuovo Lexus UX con tecnologia Self Charging Hybrid
+  description: Preparati a vivere un'avventura metropolitana di 24 ore sul primo crossover compatto ibrido elettrificato.
+  cta: Prenota ora il tuo test drive
   url: https://forms.lexus.co.uk/webforms/secretescapestestdrive.aspx
 
 offer-page:
-  country: UK
-  world: Rest of the world
+  country: Italia
+  world: Resto del mondo
 
 feature-video:
-  cta: Watch Video
+  cta: Guarda il video
   url: https://www.youtube.com/watch?v=JRg0BYcitU0
