--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ offer-card:
 
 # test drive promo
 test-drive:
-  title: Test drive the new Lexus UX Self-Charging Hybrid
+  title: Test drive the all-new Lexus UX Self-Charging Hybrid
   description: Head for your own urban adventure with 24hr test-drives in the new Lexus UX.
   cta: Book a Test Drive
   url: https://www.lexus.co.uk/forms/secret-escapes/test-drive-se
