--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ offer-card:
 # test drive promo
 test-drive:
   title: Prøvekjør den nye selvladende hybridbilen Lexux UX
-  description: Dra på et urbant eventyr med 24-timers prøvekjøring i den nye Lexus UX.
+  description: Dra på et urbant eventyr med 24-timers prøvekjøring i den nye Lexus&nbsp;UX.
   cta: Bestill prøvekjøring
   url: https://www.lexus.no/forms/secret-escapes/test-drive-se
 
