--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ offer-card:
 # test drive promo
 test-drive:
   title: Prova il nuovo Lexus UX con tecnologia Self Charging Hybrid
-  description: Preparati a vivere un'avventura metropolitana di 24 ore sul primo crossover compatto ibrido elettrificato.
+  description: Preparati a vivere un'avventura metropolitana sul primo crossover compatto ibrido elettrificato.
   cta: Prenota ora il tuo test drive
   url: https://www.lexus.it/forms/secret-escapes/test-drive-se
 
