--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ offer-card:
 
 # test drive promo
 test-drive:
-  title: Provkör den nya självladdande hybridbilen Lexus&nbsp;UX
+  title: Provkör den nya självladdande elhybriden Lexus&nbsp;UX
   description: Åk iväg på ett stadsäventyr med ett dygns provkörning av nya Lexus&nbsp;UX.
   cta: Boka en provkörning
   url: https://www.lexus.se/forms/secret-escapes/test-drive-se
