--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ offer-card:
 
 # test drive promo
 test-drive:
-  title: Prueba el nuevo híbrido autorrecargable Lexus&nbsp;UX
-  description: Lánzate a vivir tu propia escapada urbana con una prueba de conducción de 24 horas en el nuevo Lexus&nbsp;UX.
+  title: Prueba el nuevo Híbrido Autorrecargable Lexus&nbsp;UX
+  description: Lánzate a vivir tu propia escapada urbana en el nuevo Lexus&nbsp;UX.
   cta: Reserva Una Prueba De Conducción
   url: https://www.lexusauto.es/forms/secret-escapes/test-drive-se
 
