--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -8,7 +8,7 @@
   expires: 2020/04/14
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
-  uk: true
+  domestic: true
 
 - title: Farris Bad
   id: farris-bad
@@ -20,7 +20,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
-  uk: true
+  domestic: true
 
 - title: First Hotel Marin
   id: first-hotel-marin
@@ -32,7 +32,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
-  uk: true
+  domestic: true
 
 - title: Magic Hotel
   id: magic-hotel
@@ -44,7 +44,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
-  uk: true
+  domestic: true
 
 - title: Sola Strand Hotel
   id: sola-strand-hotel
@@ -56,7 +56,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
-  uk: false
+  domestic: false
 
 - title: Spectacular Oslo & Bergen break with optional fjord tour
   id: spectacular-oslo-bergen-break-with-optional-fjord-tour
@@ -68,7 +68,7 @@
   expires: 2020/04/14
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
-  uk: false
+  domestic: false
 
 - title: Farris Bad
   id: farris-bad
@@ -80,7 +80,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
-  uk: false
+  domestic: false
 
 - title: First Hotel Marin
   id: first-hotel-marin
@@ -92,7 +92,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
-  uk: false
+  domestic: false
 
 - title: Magic Hotel
   id: magic-hotel
@@ -104,7 +104,7 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
-  uk: false
+  domestic: false
 
 - title: Sola Strand Hotel
   id: sola-strand-hotel
@@ -116,4 +116,4 @@
   expires: 2020/04/20
   image: http://m-stg.secretescapes.com/lexus-design-collection/img.jpg
   link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
-  uk: false
+  domestic: false
